# AoC25

./: .gitignore  README.md  aoc25.cabal  new_day.sh  run_day.sh
solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs
src/Utils/: InputProcessing.hs  Regex.hs
src/Utils/Grid/: Map.hs  Matrix.hs
