cabal-version:   3.0
name:            aoc25
version:         0.1.0.0
license:         NONE
author:          Jacob Siegumfeldt
maintainer:      jacobi7th@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  hs-source-dirs: src
  exposed-modules: 
      Utils.InputProcessing
    , Utils.Grid.Map
    , Utils.Grid.Matrix
    , Utils.Regex
  default-language: Haskell2010
  build-depends: 
      base
    , text
    , split
    , containers
    , matrix
    , regex-tdfa

executable day01
    import:           warnings
    main-is:          Day01.hs
    hs-source-dirs:   solutions
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:    
        base
        , aoc25
        , text
        , vector
        , split
        , containers
        , mtl
        , regex-tdfa
        , heaps
        , matrix
