cabal-version:   3.0
name:            aoc25
version:         0.1.0.0
license:         NONE
author:          Jacob Siegumfeldt
maintainer:      jacobi7th@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  hs-source-dirs: src
  exposed-modules: 
      Utils.InputProcessing
    , Utils.Grid.Map
    , Utils.Grid.Matrix
    , Utils.Regex
    , Data.UnionFind.ST
  default-language: Haskell2010
  build-depends: 
      base
    , text
    , split
    , containers
    , matrix
    , regex-tdfa

executable day01
    import:           warnings
    main-is:          Day01.hs
    hs-source-dirs:   solutions
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:    
        base
        , aoc25
        , text
        , vector
        , split
        , containers
        , mtl
        , regex-tdfa
        , heaps
        , matrix

executable day02
    import:           warnings
    main-is:          Day02.hs
    hs-source-dirs:   solutions
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:    
        base
        , aoc25
        , text
        , vector
        , split
        , containers
        , mtl
        , regex-tdfa
        , heaps
        , matrix

executable day03
    import:           warnings
    main-is:          Day03.hs
    hs-source-dirs:   solutions
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:    
        base
        , aoc25
        , text
        , vector
        , split
        , containers
        , mtl
        , regex-tdfa
        , heaps
        , matrix

executable day04
    import:           warnings
    main-is:          Day04.hs
    hs-source-dirs:   solutions
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:    
        base
        , aoc25
        , text
        , vector
        , split
        , containers
        , mtl
        , regex-tdfa
        , heaps
        , matrix

executable day05
    import:           warnings
    main-is:          Day05.hs
    hs-source-dirs:   solutions
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:    
        base
        , aoc25
        , text
        , vector
        , split
        , containers
        , mtl
        , regex-tdfa
        , heaps
        , matrix

executable day06
    import:           warnings
    main-is:          Day06.hs
    hs-source-dirs:   solutions
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:    
        base
        , aoc25
        , text
        , vector
        , split
        , containers
        , mtl
        , regex-tdfa
        , heaps
        , matrix

executable day07
    import:           warnings
    main-is:          Day07.hs
    hs-source-dirs:   solutions
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:    
        base
        , aoc25
        , text
        , vector
        , split
        , containers
        , mtl
        , regex-tdfa
        , heaps
        , matrix
        , MemoTrie

executable day08
    import:           warnings
    main-is:          Day08.hs
    hs-source-dirs:   solutions
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:    
        base
        , aoc25
        , text
        , vector
        , split
        , containers
        , mtl
        , regex-tdfa
        , heaps
        , matrix
